<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.jitterted</groupId>
  <artifactId>jittershout</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>JitterShout</name>
  <url>http://www.jitterted.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>13</maven.compiler.source>
    <maven.compiler.target>13</maven.compiler.target>

    <!-- find latest at https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
    <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>

    <!-- find latest at https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
    <jacoco.maven.plugin.version>0.8.2</jacoco.maven.plugin.version>

    <!-- find latest at https://junit.org -->
    <junit-jupiter-version>5.5.2</junit-jupiter-version>

    <!-- find latest at https://mvnrepository.com/artifact/org.assertj/assertj-core -->
    <assertj.version>3.11.1</assertj.version>

    <!-- find latest at https://mvnrepository.com/artifact/org.mockito/mockito-core -->
    <mockito.version>2.23.4</mockito.version>
    <lombok.version>1.18.10</lombok.version>
    <twitch4j.version>1.0.0-alpha.17</twitch4j.version>
  </properties>

  <repositories>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
    <repository>
      <id>jcenter-snapshot</id>
      <url>https://oss.jfrog.org/artifactory/libs-release/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <!-- Makes the JAR executable, by configuring the plugin to use the included manifest file -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>${maven.jar.plugin.version}</version>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
          </archive>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>13</release>
          <compilerArgs>--enable-preview</compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
        </configuration>
      </plugin>

      <!-- JaCoCo configuration: provides test coverage reports -->
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.maven.plugin.version}</version>
        <executions>
          <execution>
            <id>default-prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.github.twitch4j</groupId>
      <artifactId>twitch4j</artifactId>
      <version>${twitch4j.version}</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.2.3</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>

    <!-- this is all you need to write tests with JUnit Jupiter -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter-version}</version>
      <!-- for writing tests "test" scope would suffice,
        but extensions are defined in the project's "main" folder, which would need "compile" -->
      <scope>test</scope>
    </dependency>
    <!-- this dependency is needed to create parameterized tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit-jupiter-version}</version>
      <scope>test</scope>
    </dependency>

    <!-- contains the engine that actually runs the Jupiter-tests -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
